{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 8,
  "lineage": "997d8b00-c547-7c62-cd0a-a1241e334e94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "food-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0763cf792771fe1bd",
            "arn": "arn:aws:ec2:ap-south-1:358218327587:instance/i-08cd8573bc25d19fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cd8573bc25d19fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05867408d96fb6030",
            "private_dns": "ip-10-0-1-110.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "public_ip": "43.205.110.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0858ac6e14c93fbc1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bd0519a63095d2ee"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08780eb92c2d498a3",
            "tags": {
              "Name": "FOOD"
            },
            "tags_all": {
              "Name": "FOOD"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd0519a63095d2ee"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-http-sg",
            "aws_subnet.food-subnet",
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "food-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:internet-gateway/igw-0fc140d9ac0375e96",
            "id": "igw-0fc140d9ac0375e96",
            "owner_id": "358218327587",
            "tags": {
              "Name": "FOOD-IGW"
            },
            "tags_all": {
              "Name": "FOOD-IGW"
            },
            "vpc_id": "vpc-02117c3225f76bd3e"
          },
          "dependencies": [
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "food-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:route-table/rtb-0e71c66ee1f2e290e",
            "id": "rtb-0e71c66ee1f2e290e",
            "owner_id": "358218327587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc140d9ac0375e96",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FOOD-RT"
            },
            "tags_all": {
              "Name": "FOOD-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02117c3225f76bd3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.food-igw",
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "food-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1383417426b38cc",
            "route_table_id": "rtb-0e71c66ee1f2e290e",
            "subnet_id": "subnet-08780eb92c2d498a3"
          },
          "dependencies": [
            "aws_internet_gateway.food-igw",
            "aws_route_table.food-rt",
            "aws_subnet.food-subnet",
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:security-group/sg-0bd0519a63095d2ee",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd0519a63095d2ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH-HTTp_SG",
            "name_prefix": "",
            "owner_id": "358218327587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-02117c3225f76bd3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "food-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:subnet/subnet-08780eb92c2d498a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08780eb92c2d498a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358218327587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FOOD-SUBNET"
            },
            "tags_all": {
              "Name": "FOOD-SUBNET"
            },
            "vpc_id": "vpc-02117c3225f76bd3e"
          },
          "dependencies": [
            "aws_vpc.food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:358218327587:vpc/vpc-02117c3225f76bd3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ceac4b55506b8c7b",
            "default_route_table_id": "rtb-08609d115cb2680ec",
            "default_security_group_id": "sg-0e723d258eba2c5fc",
            "dhcp_options_id": "dopt-0ee1d448ba05f3d95",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02117c3225f76bd3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08609d115cb2680ec",
            "owner_id": "358218327587",
            "tags": {
              "Name": "FOOD-VPC"
            },
            "tags_all": {
              "Name": "FOOD-VPC"
            }
          }
        }
      ]
    }
  ]
}